updated views and fixed some layout issues on smaller screens

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -309,7 +309,7 @@ nav {
     outline: none;
 }
 
-@media only screen and (max-width: 1550px) {
+@media only screen and (max-width: 1650px) {
     .logo {
         img {
             max-height: 65px;
@@ -449,6 +449,12 @@ nav {
                 width: 100%;
                 font-size: 30px;
             }
+            a:active {
+                background: transparent;
+            }
+            a:hover {
+                background: transparent;
+            }
         }
         .social {
             display: none;
@@ -475,13 +481,26 @@ nav {
     }
     .home-section {
         position: absolute;
-        top: 30%;
         left: 20%;
         width: 80%;
     }
+    .home-section {
+        .blurb {
+            position: absolute;
+            top: 10%;
+        }
+    }
     .lava {
-            display: none;
-
+        position: fixed;
+        left: 105%;
+        margin-left: -334px;
+        top: 76%
+    }
+    .lava {
+        img {
+            max-height: 360px;
+            max-width: 740px;
+        }
     }    
     .about-section {
         position: absolute;
